# CPD_angular_data

./: .gitmodules  DESCRIPTION  NAMESPACE  README.md  example_1D.ipynb  example_2D.ipynb  example_R.ipynb  exe_time_vs_samples_random.ipynb  exe_time_vs_samples_simulation.ipynb  execution_time_vs_samples.ipynb  execution_time_vs_samples_random.ipynb  test_apart.ipynb  test_for_fun(timing).ipynb  test_step_by_step.ipynb  test_steps_apart.ipynb  testing.ipynb  utils.py  utils_experimental.py
R/: RcppExports.R  apart_interface.cpp  interface.R
benchmark_results/: apart_time_vs_samples_const_changes_1D_10MeansGrid_penalty10.csv  apart_time_vs_samples_linear_changes_1D_10MeansGrid_penalty10.csv  pelt_time_vs_samples_const_changes_1D_10MeansGrid_penalty10.csv  pelt_time_vs_samples_linear_changes_1D_10MeansGrid_penalty10.csv  time_vs_samples_1D_2MeansGrid.csv  time_vs_samples_2D_2MeansGrid.csv  time_vs_samples_random_2D_2MeansGrid_penalty1.csv
cpp/: CMakeLists.txt  README.md
cpp/src/: apart.cpp  apart.h  example.cpp
figures/: time_vs_samples.ipynb
notebooks/: example_R.ipynb  example_python.ipynb  nstates_analysis.ipynb  penalty_analysis.ipynb  runtime_analysis.ipynb
python/: CMakeLists.txt  pyproject.toml  test_apart_for_cpp.ipynb
python/old_files/: exe_time_vs_samples_simulation.ipynb  utils.py
python/old_files/benchmark_results/: apart_time_vs_samples_const_changes_1D_10MeansGrid_penalty10.csv
python/old_files/figures/: time_vs_samples.ipynb
python/src/: main.cpp
python/src/ruptures_apart/: __init__.py
r/: apart_interface.cpp  apart_r.cpp  apart_r.h  example.ipynb
src/: Makevars.win  RcppExports.cpp  apart.h  interface.cpp
